--- a/labs/lab3fixed/Code/index.html
+++ b/labs/lab3fixed/Code/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dialogue Systems 2026</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Application Booking System</title>
+  <link rel="icon" href="data:,">
+</head>
+<body>
+  <h1>Application Booking System</h1>
+  <button id="startButton" disabled>Initializing...</button>
+  <script type="module" src="./src/main.ts"></script>
+</body>
 </html>
+```
